# autodocumentation-try

./: .pre-commit-config.yaml  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  source.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: doc_page.yaml
_modules/: index.html
_modules/source/: main.html
docs/: conf.py  index.rst  source.rst
source/: __init__.py  main.py
