[tool.poetry]
name = "prueba-documentacion"
version = "0.1.0"
description = ""
authors = ["Jesus Prieto <jsus1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pre-commit = "^2.20.0"
sphynx = { version = "^0.0.3", optional = true }
sphinx-rtd-theme = { version = "^1.1.1", optional = true }

[tool.poetry.extras]
test = ["sphynx", "sphinx-rtd-theme"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
