[tool.poetry]
name = "prueba-documentacion"
version = "0.1.0"
description = ""
authors = ["Jesus Prieto <jsus1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pre-commit = "^2.20.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphynx = "^0.0.3"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
